--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",                // <-- Add this
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]            // <-- Remove leading './'
     }
   },
   "include": [
