--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "test": "jest",
+    "dev:local": "NODE_ENV=development next dev",
+    "dev:staging": "NODE_ENV=staging next dev",
     "build": "next build",
+    "build:staging": "NODE_ENV=staging next build",
+    "build:production": "NODE_ENV=production next build",
     "start": "next start",
+    "start:staging": "NODE_ENV=staging next start",
+    "start:production": "NODE_ENV=production next start",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "type-check": "tsc --noEmit",
+    "validate": "yarn lint:fix && yarn type-check",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -17,6 +26,9 @@
     ]
   },
   "dependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@formatjs/intl-localematcher": "^0.6.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.8",
@@ -24,7 +36,8 @@
     "antd": "^5.29.0",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
-    "next": "16.0.2",
+    "negotiator": "^1.0.0",
+    "next": "16.0.7",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
@@ -33,15 +46,26 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.2",
+    "eslint-config-next": "16.0.7",
     "husky": "^8.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-jest": "^29.4.6",
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
